--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 64em) {
+@media only screen and (min-width: 1028px) {
     body {
         font-size: 18px;
     }
