--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 32.5em) {
+@media only screen and (min-width: 3560px) {
     body {
         font-size: 16px;
     }
